# mlflow-bentoml-integration

./: .env  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
conf/: config.yaml
conf/experiment/: default.yaml
mlflow_bentoml/: 1_download_model.py  3_mlflow_log_model.py  4_mlflow_bentoml_load_model.py  5_mlflow_bentoml_service.py  DataModels.py
mlruns/0/: meta.yaml
models/: bentofile.yaml  bentofile_mlflow.yaml
scripts/: build_model.sh  list_models.sh  mlflow_bentoml.sh  pull.sh  serve_model.sh
